# Clippy

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  clippy.spec  clippy.yaml  clippy.yaml.example  config.py  health_check.py  main.py  pipeline.py  pyproject.toml  requirements.txt  run_clippy.ps1  twitch_ingest.py  utils.py
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-portable.yml  ci.yml  release.yml
_internal/: README.md
_internal/transitions/: README.md
assets/fonts/: README.md
clippy/: __init__.py  __main__.py  banner.py  cache.py  cli.py  config.py  config_loader.py  deps.py  discord_ingest.py  exits.py  ffmpeg.py  log.py  models.py  naming.py  pipeline.py  preflight.py  presets.py  run.py  runtime.py  spinner.py  theme.py  twitch_ingest.py  utils.py  window.py  wizard.py  ytdlp.py
clippy/assets/fonts/: README.md
clippy/tui/: __init__.py  app.py  app.tcss  bbs.py
clippy/tui/screens/: audio.py  clip_settings.py  credentials.py  progress.py  quality.py  review.py  source.py  summary.py  transitions.py
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
docs/demo/: index.html
scripts/: Make-VHSClips.ps1  README.md  check_sequencing.py  health_check.py  import_media.py  install-hooks.ps1  install-hooks.sh  make_transitions.py  setup_wizard.py  smoke_local.py  test_transitions.py
tests/: conftest.py  test_cache.py  test_config_loader.py  test_config_singleton.py  test_console.py  test_discord_ingest.py  test_ffmpeg.py  test_filter_and_expand.py  test_headless.py  test_main_overrides.py  test_models.py  test_naming.py  test_pipeline.py  test_preflight.py  test_presets.py  test_profiles.py  test_sequencing.py  test_tui_config.py  test_tui_layout.py  test_tui_picker.py  test_tui_progress.py  test_twitch_ingest.py  test_utils.py  test_window.py  test_ytdlp.py
transitions/: README.md
