[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "clippy"
# Single-sourced from clippy/__init__.py so a release only bumps one number.
dynamic = ["version"]
description = "Build Twitch clip compilations from the command line or a TUI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Erin Lukens", email = "108551595+zebadrabbit@users.noreply.github.com"}]
keywords = ["twitch", "clips", "compilation", "ffmpeg", "video", "tui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video :: Conversion",
]
dependencies = [
    "requests>=2.31.0",
    "Pillow>=10.0.0",
    "yachalk>=0.1.5",
    "yt-dlp>=2024.3.10",
    "PyYAML>=6.0.1",
]

[project.optional-dependencies]
discord = ["discord.py>=2.3"]
tui = ["textual>=0.40"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-mock",
    "textual-dev",
    # CI runs `ruff check .` and `black --check .` from this extra.
    "ruff>=0.4",
    "black>=24.0",
]

# The `clippy` command: `clippy` (CLI), `clippy tui`, `clippy setup`.
[project.scripts]
clippy = "clippy.run:console_main"

[project.urls]
Homepage = "https://github.com/zebadrabbit/Clippy"
Source = "https://github.com/zebadrabbit/Clippy"
Issues = "https://github.com/zebadrabbit/Clippy/issues"
Changelog = "https://github.com/zebadrabbit/Clippy/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["clippy", "clippy.tui", "clippy.tui.screens"]

[tool.setuptools.dynamic]
version = {attr = "clippy.__version__"}

[tool.setuptools.package-data]
clippy = ["assets/fonts/*.ttf", "assets/fonts/*.md", "tui/*.tcss"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.black]
line-length = 100
target-version = ["py310"]
extend-exclude = '''
/(
  bin|
  cache|
  vhs_clips|
  assets|
  output|
  transitions|
  docs
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
  "bin",
  "cache",
  "vhs_clips",
  "assets",
  "output",
  "transitions",
  "docs",
]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort (import order)
]
ignore = [
  "E501",  # line too long (handled by Black's line length)
]

[tool.ruff.lint.per-file-ignores]
"main.py" = ["E402"]
"scripts/*.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
